--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@motionone/utils": "^10.18.0",
     "@tabler/icons-react": "^3.6.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-image": "^4.1.0",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0"
   },
